--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -283,8 +283,10 @@
          
         <ng-container formArrayName="tableRows" *ngFor="let group of getFormControls.controls; let i=index">
           <tr  [formGroupName]="i">
-            <td class="trash"  (click)="deleteRow(i)">&#10006;</td> 
-            <td><input type="checkbox"   checked (change)="boxstatus(i, $event)"></td> 
+            <td class="trash"  (click)="deleteRow(i)">
+                <img [src]="'assets/images/cancel.png'">
+            </td> 
+            <td><input type="checkbox"  class="ckbox"   checked (change)="boxstatus(i, $event)"></td> 
             <td><input type="text" size="10"  class="clr-input textcenter  tdbox"  formControlName="igv"></td>
             <td>
                 <textarea class="textarea_01"  style="width: 100%; height: 100%; border: none" formControlName="sanger"></textarea>
@@ -333,7 +335,6 @@
 
       </div>
 
-      <div  *ngIf="reportType === 'AML'">
       <div  style="overflow: scroll-y">
         <div style="margin-bottom: 10px;margin-top: 25px;">
             <ul style="display:flex;justify-content:flex-start; align-items: center;">
@@ -342,7 +343,7 @@
                 </li>
                 <li>&nbsp;&nbsp;</li>
                 <li>
-                    <button type="button" class="btn btn_01">저장</button>
+                    <button type="button" class="btn btn_01" (click)="addComments(reportType)">저장</button>
                 </li>
             </ul>            
             </div> 
@@ -362,6 +363,7 @@
                       <th >Variants</th>
                       <th> Comments</th>
                       <th >Reference</th>
+                 
                       <th><button class="btn btn_01" (click)="addNewCommentRow()">추가</button></th>
                   </tr>
               </thead>
@@ -383,7 +385,7 @@
         </form>
         </div>    
       </div>
-    </div>
+  
 <!--     -->
               <div class="sub_title">*Methods</div>
               <div class="pd_r20">
