--- a/src/app/forms/form2/form2.component.scss
+++ b/src/app/forms/form2/form2.component.scss
@@ -100,6 +100,21 @@
    cursor: pointer;
  }
 
+ .ckbox {
+   display: flex;
+   align-items: flex-end;
+   margin-top: 35px;
+   width: 100%;
+ }
+
+ img {
+   display: flex;
+   align-items: flex-end;
+   margin-top: 30px;
+   margin-left: 40px;
+   justify-content: center;
+ }
+
  .tdbox {
    display: flex;
    align-items: flex-end;
