--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -12,18 +12,28 @@
                         <td class="txt_02"> Other molecular and cytogenetic profiles</td>
                     </tr>
                 </table>
-                <table width="100%" cellpadding="0" cellspacing="0" class="table_result">
-                    <colgroup>
-                    <col style="width:30%;" />
-                    <col style="width:20%;" />
-                    <col style="width:50%;" />
-                    </colgroup>
+                <table width="100%" cellpadding="0" cellspacing="0" class="table_result">                  
+                        <colgroup *ngIf="type === 'AML' || type === 'ALL' || type === 'MDS'; else rest">
+                            <col style="width:30%;" />
+                            <col style="width:20%;" />
+                            <col style="width:50%;" />
+                        </colgroup>
+                        <ng-template #rest>
+                            <col-group>
+                            <col style="width:50%;"/>
+                            <col style="width:50%;" />
+                            </col-group>
+                        </ng-template>
+
                     <thead>
                         <tr>
-                            <th class="table_result_line">Leukemia associated fusion</th>
+                            <th *ngIf="type === 'AML' || type === 'ALL'" class="table_result_line">Leukemia associated fusion</th>
+                            <th *ngIf="type === 'MDS'" class="table_result_line">Diagnosis</th>
 
                             <th *ngIf="type === 'AML'">FLT3-ITD</th>
                             <th *ngIf="type === 'ALL'">IKZF1 deletion</th>
+                            <th *ngIf="type === 'MDS'">Genetic test</th>
+                            <th *ngIf="type === 'LYN'">Bone marrow aspiralion analysis</th>
                             <th>Chromosomal analysis</th>
                         </tr>
                     </thead>
@@ -45,6 +55,8 @@
                         <tr>
                             <td *ngIf="type === 'AML'">TARGET DISEASE:Acute myeloid leukemia</td>
                             <td *ngIf="type === 'ALL'">TARGET DISEASE:Acute lymphoblastic leukemia</td>
+                            <td *ngIf="type === 'MDS'">TARGET DISEASE:MDS/MPN</td>
+                            <td *ngIf="type === 'LYN'">TARGET DISEASE:Lymphoma</td>
                             <td>METHODS: *Massivery parallel sequencing</td>
                         </tr>
                         <tr>
