--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -104,6 +104,7 @@
             </colgroup>
       <thead>
           <tr>
+              
               <th>
                 <button class="btn btn_01" (click)="addRow()">추가</button>
               </th> 
@@ -127,8 +128,14 @@
       </thead>
       <tbody>
          
-        <ng-container formArrayName="tableRows" *ngFor="let group of getFormControls.controls; let i=index">
-          <tr  [formGroupName]="i">
+        <ng-container formArrayName="tableRows"  *ngFor="let group of getFormControls.controls; let i=index">
+          <tr  [formGroupName]="i" >
+              <!-- <td>
+                <div class="drag-handle">
+                <ng-container [ngTemplateOutlet]="dragHandleTmpl">
+                </ng-container>
+                </div>
+              </td> -->
             <td class="trash"  (click)="deleteRow(i)">
                  <img [src]="'assets/images/cancel.png'">
             </td> 
@@ -307,3 +314,12 @@
        </div>
    </div>
 </div>
+
+<ng-template #dragHandleTmpl>
+	<svg class="bi bi-list handle" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+		xmlns="http://www.w3.org/2000/svg">
+		<path fill-rule="evenodd"
+			d="M2.5 11.5A.5.5 0 013 11h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 7h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5zm0-4A.5.5 0 013 3h10a.5.5 0 010 1H3a.5.5 0 01-.5-.5z"
+			clip-rule="evenodd" />
+	</svg>
+</ng-template>
