--- a/src/app/forms/form4/form4.component.scss
+++ b/src/app/forms/form4/form4.component.scss
@@ -122,6 +122,16 @@ img {
   width: 100%;
 }
 
+.drag-handle {
+  display: flex;
+  align-items: center;
+  cursor: move;
+
+  .handle {
+    margin-right: 5px;
+  }
+}
+
 /*
 .tdbox {
  width: 120px !important;
