--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,6 +28,13 @@
                   <td class="menu03">
                     <a routerLink="/diag/inhouse">
                     <span class="nav-text"></span></a>
+                    <!-- <ul class="sub-menu">
+                      <li>Benigne</li>
+                      <li>Artifacrts</li>
+                      <li>Mutation</li>
+                      <li>Comments</li>
+                      <li>유전자관리</li>
+                    </ul> -->
                   </td>
 
                   <td class="menu04">
