--- a/src/app/inhouse/inhouse.component.html
+++ b/src/app/inhouse/inhouse.component.html
@@ -23,6 +23,11 @@
                                 <div class="title">
                                     <a routerLink="/diag/inhouse/comments" class="active nav-link" routerLinkActive="active">Comments</a>
                                 </div>
+                            </li>  
+                            <li>
+                                <div class="title">
+                                    <a class="active nav-link bold">유전자관리</a>
+                                </div>
                             </li>                                  
                         </ul>
                     </div>
