--- a/src/app/inhouse/mutation/mutation.component.scss
+++ b/src/app/inhouse/mutation/mutation.component.scss
@@ -48,11 +48,11 @@
 .txt_c > p {
     margin-top: 0;
 }
-.input_01 {
-   height: 30px;
-   margin : 10px;
-   border : none;
-}
+// .input_01 {
+//    height: 30px;
+//    margin : 10px;
+//    border : none;
+// }
 
 .clr-input {
   box-shadow: none;
