--- a/src/app/byengri/byengri/manage-statistics/manage-statistics.component.html
+++ b/src/app/byengri/byengri/manage-statistics/manage-statistics.component.html
@@ -11,20 +11,20 @@
             <input type="date" [value]="endToday()" class="input_01"   #end   style="width:180px;"/> &nbsp;&nbsp;&nbsp;  
             <input type="text" placeholder="사용자ID" class="input_01" #userId />&nbsp;&nbsp;
             <input type="text" placeholder="사용자명" class="input_01" #userNm />&nbsp;&nbsp;
-            <button type="button" class="btn btn_02" (click)="search(start.value, end.value, userId.value, userNm.value)" >SEARCH</button>
+            <button type="button" class="btn btn_02" (click)="search(start.value, end.value, userId.value, userNm.value)" >조회</button>
         </div>
         <div> Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages  </div>   
         <div class="box">
             <table border="0" cellpadding="0" cellspacing="0" class="table_list">
                 <colgroup>
-                <col style="width:5%;" />
-                <col style="width:10%;" />
-                <col style="width:15%;" />
-                <col style="width:10%;" />
-                <col style="width:10%;" />
-                <col style="width:20%;" />
-                <col style="width:15%;" />
-                <col style="width:15%;" />
+                    <col style="width:5%;" />
+                    <col style="width:10%;" />
+                    <col style="width:15%;" />
+                    <col style="width:10%;" />
+                    <col style="width:10%;" />
+                    <col style="width:20%;" />
+                    <col style="width:15%;" />
+                    <col style="width:15%;" />
                 </colgroup>
                 <thead>
                     <tr>
