--- a/src/app/byengri/main/main.component.html
+++ b/src/app/byengri/main/main.component.html
@@ -4,12 +4,12 @@
     <!-- <app-upload *ngIf="!isVisible"    (onSelected)="onSelected()" (onCanceled)="onCanceled()"></app-upload> -->
   <div id="container" style="margin-top: 0px;">
     <div id="content" >
-        <!-- <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
             <tr>
-                <td  class="mail_title">Main Tilte_InHouse Benign</td>
+                <td  class="mail_title">WorkList</td>
                 <td class="main_btn"> </td>
             </tr>
-        </table> -->
+        </table>
         <div class="box mg_b20 pd_20">
             <!-- <input type="text" class="input_01" 
             #pathologyNo  (click)="setPathologyNo(pathologyNo.value)" placeholder="검체번호" />&nbsp;&nbsp;
@@ -23,24 +23,24 @@
             ~
             <input type="date" [value]="endToday()" class="input_01" #end  style="width:150px;"/> &nbsp;&nbsp;          
             <button type="button" class="btn btn_02" (click)="search(start.value, end.value, pathologynum.value, patient.value, 'Y')"
-             >조 회</button>
+             >조회</button>
         </div>
         <div class="box">
             <div class="box_100 ">
             <table border="0" cellpadding="0" cellspacing="0" class="table_list  fixed_header table_resul_x">
                 <colgroup>
-                <col style="width:2%;" />
-                <col style="width:9%;"/>
-                <col style="width:10%;" />
-                <col style="width:10%;" />
-                <col style="width:5%;" />
-                <col style="width:5%;" />
-                <col style="width:10%;" />
-                <col style="width:10%;" />
-                <col style="width:10%;" />
-                <col style="width:10%;" />
-                <col style="width:10%;" />
-                <col style="width:9%;" />
+                    <col width="40px">
+                    <col width="8%">
+                    <col width="8%">
+                    <col width="6%">
+                    <col width="6%">
+                    <col width="9%">
+                    <col width="*">
+                    <col width="9%">
+                    <col width="9%">
+                    <col width="10%">
+                    <col width="10%">
+                    <col width="9%">
                 </colgroup>
                 <thead class="fixheader">
                     <tr>
