--- a/src/app/home/components/manage-functions/manage-functions.component.html
+++ b/src/app/home/components/manage-functions/manage-functions.component.html
@@ -12,9 +12,9 @@
             <input type="text" placeholder="함수명" class="input_01" #functionName />&nbsp;&nbsp; 
             <button type="button" class="btn btn_02" (click)="search(start.value, end.value, functionName.value)" >조회</button>
         </div>
-        <div style="overflow: hidden;"> 
-            <span style="display: inline-block;margin-top: 15px;">Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages</span>
-            <table border="0" cellspacing="0" cellpadding="0" class="mg_b10" style="display: inline-block;width: auto;float: right;">
+        <div class="total"> 
+            <span>Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages</span>
+            <table border="0" cellspacing="0" cellpadding="0" class="mg_b10">
                 <tr>
                     <td class="main_btn">  
                         <ul>
