--- a/src/app/inhouse/comments/comments.component.scss
+++ b/src/app/inhouse/comments/comments.component.scss
@@ -6,8 +6,7 @@ caption {
 .table-box-wrap {
     position: relative;
     /*width:509px;*/
-    margin-top: 20px;
-    padding-top: 60px;
+    padding-top: 40px;
   
 }
 .table-box-wrap .table-box {
@@ -29,8 +28,11 @@ caption {
     font-weight: normal;
     width: 120px;
     height: 40px;
-    background:#6699ff;
-    color:#fff;
+    font-size: 12px;
+    color: #666666;
+    padding: 10px;
+    background-color: #fafafa;
+    border: 1px solid #e0e0e0;
 }
 
 .table-box-wrap .table-box table td {
@@ -114,7 +116,7 @@ caption {
 .txt_c > p {
     margin-top: 0;
 }
-.input_01 {
-   height: 30px;
-   margin : 10px;
-}
+// .input_01 {
+//    height: 30px;
+//    margin : 10px;
+// }
