--- a/src/app/inhouse/inhouse.component.html
+++ b/src/app/inhouse/inhouse.component.html
@@ -26,7 +26,7 @@
                             </li>  
                             <li>
                                 <div class="title">
-                                    <a class="active nav-link bold">유전자관리</a>
+                                    <a routerLink="/diag/inhouse/genemgn" class="active nav-link bold">유전자관리</a>
                                 </div>
                             </li>                                  
                         </ul>
