--- a/src/app/inhouse/artifacts/artifacts.component.html
+++ b/src/app/inhouse/artifacts/artifacts.component.html
@@ -50,7 +50,7 @@
                 <colgroup> 
                 </colgroup>    
                 <thead>
-                    <tr>
+                    <tr class="pd-r-12">
                         <th class="txt_l">No.</th>
                         <th class="txt_l">Genes</th>
                         <th class="txt_l">Location</th>
