--- a/src/app/inhouse/benign/benign.component.html
+++ b/src/app/inhouse/benign/benign.component.html
@@ -47,7 +47,7 @@
     
             <table border="0" cellpadding="0" cellspacing="0" class="table_list " style="max-height:36px;"> 
                 <thead>
-                    <tr>
+                    <tr class="pd-r-12">
                         <th class="txt_l" >No.</th>
                         <th class="txt_l">Genes</th>
                         <th class="txt_l">Location</th>
