--- a/src/app/inhouse/comments/comments.component.html
+++ b/src/app/inhouse/comments/comments.component.html
@@ -22,7 +22,7 @@
         
         <div class="box mg_b20 pd_20">
             <input type="text" class="input_01" placeholder="Genes" #genes>
-            <button type="button" class="btn btn_02" (click)="search(genes.value)" >조회</button>
+            <button type="button" class="btn btn_02" (click)="search(genes.value)" style="margin-left: 10px;">조회</button>
         </div>
     <div class="total">
          <span>Total: {{totRecords}} Records  ({{curPage}} / {{totPage}}) Pages  </span>
@@ -57,7 +57,7 @@
                     <col width="%" />
                 </colgroup>
                 <thead>
-                    <tr>
+                    <tr class="pd-r-12">
                         <th style ="width:2px;" class="txt_l">No</th>
                         <th style ="width:5px;" class="txt_l">Type</th>
                         <th style ="width:50px;" class="txt_l">Gene</th>
